--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node ssr-server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "express": "^4.18.2",
     "next": "14.0.4",
     "node-sass": "^9.0.0",
     "react": "^18",
