--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "next": "14.0.4",
     "node-sass": "^9.0.0",
