add product add page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
